Edited wiki page FAQ through web user interface.

--- a/wiki/FAQ.wiki
+++ b/wiki/FAQ.wiki
@@ -34,13 +34,13 @@
 *I am on Linux/OSX, so can't run Mace. What can I do?*
 	You could Mono 2.6 Beta 3 (or later) and open the code in that. Then run the project and Mace will appear. I haven't tested this, so can't guarantee that it will work :(
 
-	Alternatively, you could check the downloads page to see if worlds are available for the latest version. If not, you are welcome to post in the [http://www.minecraftforum.net/topic/357201-mace-v140-random-city-generator/ Mace topic] and I will create some worlds for you.
+	Alternatively, you could check the [http://code.google.com/p/mace-minecraft/downloads/list downloads page] to see if worlds are available for the latest version. If not, you are welcome to post in the [http://www.minecraftforum.net/topic/357201-mace-v140-random-city-generator/ Mace topic] and I will create some worlds for you.
 
 *Do I need to close !MineCraft whilst using Mace?*
 	Mace doesn't interact with !MineCraft, so it's okay if !MineCraft is open or closed.
 
 *Can Mace generate a city in an existing world?*
-	This is currently not possible and I don't have any immediate plans to do this. However, it is probably possible to move a generated city into an existing world using a tool like [http://www.minecraftforum.net/topic/13807-mcedit-minecraft-world-editor-compatible-with-mc-beta-166/ McEdit].
+	This is currently not possible and I don't have any immediate plans to do this. However, it is possible to move a generated city into an existing world using a tool like [http://www.minecraftforum.net/topic/13807-mcedit-minecraft-world-editor-compatible-with-mc-beta-166/ McEdit].
 
 *Can I use a Mace world on my !MineCraft server?*
 	Yes. I haven't tried this myself, but several people have reported doing this successfully.
@@ -54,7 +54,7 @@
 == Problems ==
 
 *I spotted a bug. Would you like to know?*
-	Yes, please let me know in the [http://www.minecraftforum.net/topic/357201-mace-v140-random-city-generator/ Mace topic]. It would help me a great deal if you can provide details about the bug, such as the version of Mace you are using, a screenshot, the generated world, and your !MineCraft version. If you can find steps to reproduce the bug, that would help me as well.
+	Yes, please let me know in the [http://www.minecraftforum.net/topic/357201-mace-v140-random-city-generator/ Mace topic]. It would help me a great deal if you can provide details about the bug, such as the version of Mace you are using, a screenshot, the generated world, any installed mods, and your !MineCraft version. If you can find steps to reproduce the bug, that would help me as well.
 
 *The terrain difference between the city and the natural terrain is very weird! Why is that?*
 	Mace creates the city part of the world, then !MineCraft creates the natural terrain around it. The terrain does not match up because it is created by two separate applications. Fixing this is outside the scope of Mace, but I might write a separate tool to fix this in the future.
@@ -62,19 +62,19 @@
 == Suggestions ==
 
 *I have a suggestion, would you like it?*
-	Definitely! It might be something I've already got planned, so have a quick look through the ToDo list to see if it's listed.
+	Definitely! It might be something I've already got planned, so have a quick look through the [[ToDo]] list to see if it's listed.
 
 *Can you include NPCs in Mace?*
-		Mace doesn't interact with !MineCraft, unlike mods, which work from inside !MineCraft. So it is not possible for Mace to include NPCs in !MineCraft. However, the [http://www.minecraftforum.net/topic/227822-166-millenaire-npc-village-085b-small-fixes/ Millenaire] mod adds NPCs to the game, who will interact with you and build a city. You might like to try that mod instead. Notch has stated that NPCs will be added to the game in the future, so potentially I might be able to add them to the city.
+	Yes! Ghostdancer has created the [http://www.minecraftforum.net/topic/532831-173-mobs-for-mace-npc-mod/ Mobs for Mace] mod, which allows you to add NPCs to the city.
 
 *Is it possible to change the region that the city is in?*
 	Unfortunately the region data is decided by !MineCraft at run time, so it is not possible for Mace to change it.
 
 *Is it possible to specify the type of terrain around the city?*
-	In the future this might be possible, but I'm not focussing on that at the moment.
+	In the future this might be possible, but I'm currently not focussing on terrain generation.
 
 *Will Mace be able to make multiple cities in one world?*
-	I would like to add this in the future, but it might be too ambitious.
+	I would like to add this in the future, so watch this space...
 
 *All Mace cities are square, any plans to change that?*
 	There's a lot of code in the generator that relies on the city being square, so that's the best way for it to be right now. 
@@ -102,8 +102,8 @@
 *Are you going to add more buildings to Mace?*
 	Yes, there's several more buildings that I'd like to add.
 
-*Can you add XYZ building?*
-	Suggestions for buildings are always welcome. It might already be planned, in which case it'll be on to the ToDo list or the UnreleasedChanges.
+*Would you like my suggestion for a building?*
+	Suggestions for buildings are always welcome. It might already be planned, in which case it'll be on to the [[ToDo]] list or the [[UnreleasedChanges]].
 
 *Can I modify the signs that Mace puts on buildings?*
 	Yes. In the Resources folder there are lots of text files, which contain the data for signs. You can remove/add/edit the files as you like. Take note of any comments at the top of the file. Please do not use pipe characters "|" in these files. "~" characters are used to force a new line on the sign text. See the gravestone.txt file for examples of that.
@@ -115,6 +115,9 @@
 
 *Can I include Mace in my mod/tool compilation or website?*
 	Yes. You are very welcome to do this. Mace is released under the GNU GPL license, which has terms [http://creativecommons.org/licenses/by-sa/3.0/ roughly similar to this].
+
+*Can I use a Mace city for my adventure map or let's play series?*
+	Yes. I'd love to see Mace being used for anything like this, so it would be be great if you let me know about it.
 
 *Can I change the code in Mace?*
 	Yes. The entire Mace code and all resources can be found on the downloads page. Mace is written in C# and edited in Visual Studio 2010. Other IDEs are available!
