--- a/wiki/FAQ.wiki
+++ b/wiki/FAQ.wiki
@@ -124,7 +124,7 @@
 	I don't have any plans to do this, because they wouldn't fit with the current buildings. I want the buildings to be small and detailed, rather than large and empty.
 
 *Would you like my suggestion for a building?*
-	Suggestions for buildings are always welcome. It might already be planned, in which case it'll be on to the [[ToDo]] list or the [[UnreleasedChanges]].
+	Suggestions for buildings are always welcome. It might already be planned, in which case it'll be on to the [ToDo] list or the [UnreleasedChanges].
 
 *Can I modify the signs that Mace puts on buildings?*
 	Yes. In the Resources folder there are lots of text files, which contain the data for signs. You can remove/add/edit the files as you like. Take note of any comments at the top of the file. Please do not use pipe characters "|" in these files. "~" characters are used to force a new line on the sign text. See the gravestone.txt file for examples of that.
