--- a/wiki/Screenies.wiki
+++ b/wiki/Screenies.wiki
@@ -2,23 +2,23 @@
 
 Here's a screenshot from each version, from roughly the same location:
 
-V1.0
+[http://code.google.com/p/mace-minecraft/downloads/detail?name=mace-v1_0_0.zip&can=2&q= V1.0] - Once upon a time...
 [http://iceyboard.no-ip.org/images/mace/v1_0.jpg http://iceyboard.no-ip.org/images/mace/v1_0_thumb.jpg]
 
-V1.1
+[http://code.google.com/p/mace-minecraft/downloads/detail?name=mace-v1_1_0.zip&can=2&q= V1.1] - Cactus farms, new path layout!
 [http://iceyboard.no-ip.org/images/mace/v1_1.jpg http://iceyboard.no-ip.org/images/mace/v1_1_thumb.jpg]
 
-V1.2
+[http://code.google.com/p/mace-minecraft/downloads/detail?name=mace-v1_2_0.zip&can=2&q= V1.2] - This version added the interface, whilst the city stayed the same
 [http://iceyboard.no-ip.org/images/mace/v1_2.jpg http://iceyboard.no-ip.org/images/mace/v1_2_thumb.jpg]
 
-V1.3
+[http://code.google.com/p/mace-minecraft/downloads/detail?name=mace-v1_3_0.zip&can=2&q= V1.3] - Emblems, fire beacons, orchards, new crenels!
 [http://iceyboard.no-ip.org/images/mace/v1_3.jpg http://iceyboard.no-ip.org/images/mace/v1_3_thumb.jpg]
 
-V1.4
+[http://code.google.com/p/mace-minecraft/downloads/detail?name=mace-v1_4_0.zip&can=2&q= V1.4] - Different buildings!
 [http://iceyboard.no-ip.org/images/mace/v1_4.jpg http://iceyboard.no-ip.org/images/mace/v1_4_thumb.jpg]
 
-V1.5
+[http://code.google.com/p/mace-minecraft/downloads/detail?name=mace-v1_5_0.zip&can=2&q= V1.5] - More buildings!
 [http://iceyboard.no-ip.org/images/mace/v1_5.jpg http://iceyboard.no-ip.org/images/mace/v1_5_thumb.jpg]
 
-V1.6
+[http://code.google.com/p/mace-minecraft/downloads/detail?name=mace-code-v1_6_0.zip&can=2&q= V1.6] - Underground terrain, mineshaft!
 [http://iceyboard.no-ip.org/images/mace/v1_6.jpg http://iceyboard.no-ip.org/images/mace/v1_6_thumb.jpg]
