--- a/wiki/ToDo.wiki
+++ b/wiki/ToDo.wiki
@@ -13,6 +13,8 @@ For changes that are done, but not released yet, please see the UnreleasedChange
  * Mineshaft entrance
  * Create a rail system inside the city walls
  * Allow for farms to be orientated the other way
+ * Stop hard-coding the farm buildings
+ * Allow anyone to add new farm buildings
  * Add to FAQ: how to use with multiplayer servers
  * Different street lights
  * More flowers/grass inside the city
