Edited wiki page ToDo through web user interface.

--- a/wiki/ToDo.wiki
+++ b/wiki/ToDo.wiki
@@ -12,6 +12,7 @@ For changes that are done, but not released yet, please see the UnreleasedChange
  * L-shaped buildings
  * Mineshaft entrance
  * Create a rail system inside the city walls
+ * Add an option to generate empty plots for a multiplayer server
  * Allow for farms to be orientated the other way
  * Stop hard-coding the farm buildings
  * Allow anyone to add new farm buildings
