--- a/wiki/ToDo.wiki
+++ b/wiki/ToDo.wiki
@@ -8,7 +8,10 @@ For changes that are done, but not released yet, please see the UnreleasedChange
  * Add a city hall
  * Add a boathouse when there's a water moat
  * More buildings
-  * Wizard's tower
+  * Wizard's tower (unique)
+  * Large park (unique)
+  * Windmill (farm building, unique)
+  * Blacksmith (how would this be different to the crafting hut?)
  * L-shaped buildings
  * Mineshaft entrance
  * Create a rail system inside the city walls
@@ -19,6 +22,7 @@ For changes that are done, but not released yet, please see the UnreleasedChange
  * Add to FAQ: how to use with multiplayer servers
  * Different street lights
  * Enclose the mini farm
+ * Add a sign to the guards barracks, so people know what it is
  * Generate resources at the same starting level, but make them go down to bedrock
  * More flowers/grass inside the city
  * Reduce frequency of the apartment building
