Edited wiki page UnreleasedChanges through web user interface.

--- a/wiki/UnreleasedChanges.wiki
+++ b/wiki/UnreleasedChanges.wiki
@@ -5,6 +5,8 @@ The next version will be V1.7 - The Improvement Iteration.
 
 == Done ==
 
+ * Apartment frequency is now "rare" rather than "average"
+
 == In Progress ==
 
 == Planned ==
