--- a/wiki/UnreleasedChanges.wiki
+++ b/wiki/UnreleasedChanges.wiki
@@ -20,6 +20,7 @@ The next version will be V1.7 - The Improvement Iteration.
  * The mini farm is now enclosed to stop animals destroying it.
  * Added some more combinations to the brothel names.
  * Improved the house signs.
+ * Very small cities had an unrealistically large number of unique buildings, so I've disabled prioritising unique buildings on very small cities.
  * Added some more wall materials.
  * Sponge in the resource world is turned into a random wool colour for each building. This is useful for randomly coloured carpets.
  * The list of farm buildings and mineshaft entrances are taken from buildings.xml, which means anyone can add new buildings of these types. They can use all the frequency values.
