--- a/wiki/Credits.wiki
+++ b/wiki/Credits.wiki
@@ -7,4 +7,6 @@ Thank you to everybody in the [http://www.minecraftforum.net/topic/357201-mace-v
 
 Thank you to people who have suggested ideas and given bug reports. They are listed in the notes for each version.
 
+Thank you for the buildings from Ghostdancer (mineshaft entrances) and coau14 (igloo, compact house) and TheMegaMiner (castle).
+
 Thank you to Simon and Lewis, because a significant portion of Mace was written whilst listening to [http://yogscast.wikia.com/wiki/The_YoGPoD The YoGPoD].
