--- a/wiki/Credits.wiki
+++ b/wiki/Credits.wiki
@@ -5,7 +5,7 @@ Thank you to jaquadro for his [http://code.google.com/p/substrate-minecraft/ Sub
 
 Thank you to everybody in the [http://www.minecraftforum.net/topic/357201-mace-v140-random-city-generator/ forum topic] for their encouragement, suggestions and bug reports. Thanks guys!
 
-Thank you to people who have suggested ideas and given bug reports. They are listed in the notes for each version.
+Thank you to everyone that have suggested ideas and given bug reports. They are listed in the notes for each version.
 
 Thank you for the buildings from Ghostdancer (mineshaft entrances) and coau14 (igloo, compact house) and !TheMegaMiner (castle).
 
