--- a/wiki/UnreleasedChanges.wiki
+++ b/wiki/UnreleasedChanges.wiki
@@ -30,4 +30,7 @@ These are the changes that are done and will be released in version 1.7 - The Im
 
 == Planned ==
 
-See the [ToDo] list.
+See the [ToDo] list. High priority things for this update:
+
+ * Spawners for _Mobs for Mace_ by Ghostdancer.
+ * Mineshaft features
